Add Section Medallions

--- a/o-nas.html
+++ b/o-nas.html
@@ -30,19 +30,47 @@ title: O nás
             <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
         </div>
         <div class="section-o-nas-2__third-content">
-            <p class="paragraph section-o-nas-2__part-of-flex">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+            <p class="paragraph section-o-nas-2__part-of-flex">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat. Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
             <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500" alt=""></figcaption>
         </div>
     </section>
 
+
+    <!-- Medailonky -->
+
     <div class="u-background u-background--color-primary-200">
         <section class="section-medallions u-wrapper">
-            <h2 class="heading-secondary section-medallions__title">Medailonky</h2>
-            <div>
-                <div>
-                    <figcaption><img src="" alt=""></figcaption>
-                    <h4>Žaneta Mihališin</h4>
-                    <p></p>
+            <h2 class="heading-secondary section-medallions__title u-center-text">Medailonky</h2>
+            <div class="section-medallions__grid u-padding-top-small">
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_zaneta-mihalisin.jpg" width="250" alt="Žaneta Mihališin"></figcaption>
+                    <h4 class="medallion__title">Žaneta Mihališin DiS</h4>
+                    <p class="medallion__label">zakladatelka</p>
+                    <p class="medallion__text paragraph">Ráda naslouchá životním příběhům. Je milovnicí vzdělávání, celostní medicíny, změn a bezprostřednosti. Motivaci hledá v hudbě, poznávání nových kultur, ráda maluje a tančí. Děti jsou jejími průvodci i studnicí inspirace ke vzdělávání, učení, poznávání.Rodičovství vnímá jako cestu rodiče sebepoznáním, školou intuice a obrovské vytrvalosti, náuce sebepéče a cesty k vlastním zdrojům. KoniPas vznikl s myšlenkou nebýt na to všechno sám a přidanou hodnotou celostní péče jak pro dítě tak rodiče, na jednom místě.</p>
+                </div>
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_martin-mihalisin.jpg" width="250" alt="Martin Mihališin"></figcaption>
+                    <h4 class="medallion__title">Martin Mihališin</h4>
+                    <p class="medallion__label">funkce ve spolku</p>
+                    <p class="medallion__text paragraph">Humor, Vzdelávanie, Rodina - sú tri piliere na ktorom stojí zmysel môjho štastného života. Každý jeden z pilierov má nenahraditeľné miesto a nikdy sa nesmie na jeden z nich zabudnúť. Vstúpiť do Konipasu som sa rozhodol z dôvodu, že s manželkou vychovávame dcérku s vývojovou dysfáziou a viem ako je dôležite mať komplexné informácie o tej, alebo inej diagnóze. Nemenej dôležite je si vymienať skúsenosti s ďalšími rodičmi a umožniť im sa aj spoločne stretnúť. Konipas mi z týchto dôvodov, príde ako skvele miesto, kde sa všetky tieto služby stretnú na jednom mieste.</p>
+                </div>
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_veronika-lerchova.jpg" width="250" alt="Veronika Lerchová"></figcaption>
+                    <h4 class="medallion__title">Veronika Lerchová</h4>
+                    <p class="medallion__label">muzikoterapie</p>
+                    <p class="medallion__text paragraph">Je průvodkyní Žen i dětí v cestě za poznáním. Čerpá ze svých dlouholetých zkušeností v oblasti kreativity, vedení lidí a osobního duchovního rozvoje. Její kouzlo spočívá v hlubokém napojení a silné intuici s každým klientem. Ve svém volném čase se věnuje hudbě, umění, tanci, seberozvoji a vzdělávání. Je velkou milovnicí přírody, květin, přírodních bytostí a kouzelného, magického světa..</p>
+                </div>
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_kristyna-novotna.jpg" width="250" alt="Kristýna Novotná"></figcaption>
+                    <h4 class="medallion__title">Kristýna Novotná</h4>
+                    <p class="medallion__label">zooterapie</p>
+                    <p class="medallion__text paragraph">vystudovala hotelovou školu , ale vždy ji to táhlo jiným směrem. Směrem pomoci těm kteří to potřebují ať to byli děti, dospělí nebo i z říše zvířat.Postupně se chovatelský koníček změnil v soukromou zoo , občas i dočasný útulek. Baví ji práce s dětmi , duší je stále v tom dětském světě a proto pořádá zájezdy pro rodiny s dětmi do různých míst.Klame tělem a občas i tváří , za drsným pohledem se skrývá doslova cíťa.Kristýna je maminka dvou malých holčiček, a její životní heslo je: Život je boj , život je hra. Já jsem vítěz , já jsem hráč.</p>
+                </div>
+                <div class="medallion">
+                    <figcaption class="medallion__fig"><img class="medallion__img" src="/images/medailonek_petra-dobiasova.jpg" width="250" alt="Mgr. Petra Dobiášová"></figcaption>
+                    <h4 class="medallion__title">Mgr. Petra Dobiášová</h4>
+                    <p class="medallion__label">funkce ve spolku</p>
+                    <p class="medallion__text paragraph">Nabízené služby KoniPASe mi přijdou velmi přínosné a důležité. Byla bych moc ráda, kdyby KoniPAS existoval již v době, kdy můj starší syn válčil s výslovností doslova každé hlásky a kdy se učil, jak ze dvou a tří slov sestavit smysluplnou větu. Vzájemná podpora rodičů mezi sebou i možnost setkávat se s odborníky z různých oblastí je pro rodiče velká pomoc. KoniPAS vznikl v lednu 2021 pod organizací Maminky dětem, z. s. v Rodinném centru Milovice (kde jsem již od roku 2003). Postupně roste a rozšiřuje své služby. Zcela po právu si tedy zaslouží být samostatnou organizací. Jsem hrdá na to, že jsem nové organizaci KoniPAS Milovice, z. s. pomáhala při jejím vzniku a osamostatňování.</p>
                 </div>
             </div>
         </section>
