--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ title: KoniPAS
 
         <section class="section-hero">
             <div class="section-hero__content u-center-text">
-                <h1 class="heading-primary">Hlavní titulek</h1>
-                <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
-                <p><a class="btn" href="#">O nás</a></p>
+                <h1 class="heading-secondary">,,Rozumět znamená pomáhat“</h1>
+                <p class="paragraph">Hlavním ​​smyslem podpůrné skupiny je propojení, sounáležitost se všemi členy rodiny, přijetí. Spojuje nás společné, jsme rodina, jsme komunita, známe osoby se speciálními potřebami. Čas, zastavit se s rodinou. To pravé místo je s námi. Vítejte mezi námi.</p>
+                <p><a class="btn" href="/o-nas/">Co detailně děláme?</a></p>
             </div>
             <div class="section-hero__images">
                 <div class="section-hero__img-wrapp section-hero__img-wrapp--1"></div>
