--- a/o-nas.html
+++ b/o-nas.html
@@ -9,7 +9,7 @@ title: O nás
         <div class="section-o-nas__flex">
             <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/zaneta-mihalisin.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
-                <p class="paragraph">R​​​espekt​, pochopení ​a ​přijetí​, tři základní pojmy úspěšné mezilidské komunikace. ​Cílem ​naší ​iniciativ​y ​je ​propojení lidí. Propojit dospělé i děti, které obecně vnímáme jako zdravé s těmi znevýhodněnými, s těmi, kteří si žijí svůj vlastní život ve svém vlastním světě. Dáváme si za cíl podnítit zájem nahlédnout do uzavřeného světa našich nejbližších.​​​</p>
+                <p class="paragraph">Respekt, pochopení a přijetí, tři základní pojmy úspěšné mezilidské komunikace. Cílem naší iniciativy je propojení lidí. Propojit dospělé i děti, které obecně vnímáme jako zdravé s těmi znevýhodněnými, s těmi, kteří si žijí svůj vlastní život ve svém vlastním světě. Dáváme si za cíl podnítit zájem nahlédnout do uzavřeného světa našich nejbližších.</p>
                 <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
             </div>
         </div>
@@ -21,12 +21,12 @@ title: O nás
         <div class="section-o-nas-2__flex">
             <div class="section-o-nas-2__empty"></div>
             <div class="section-o-nas-2__first-content">
-                <h2 class="heading-tertiary section-for__title">​Proč vlastně vznikl ​​Konipas Milovice z.s​​​? A kdo stál u zrodu?</h2>
+                <h2 class="heading-tertiary section-for__title">Proč vlastně vznikl Konipas Milovice z.s? A kdo stál u zrodu?</h2>
                 <p class="paragraph">Milovicích žije přibližně 14 tisíc obyvatel. Rodiny se zde, jako všude jinde, potýkají s většími  i menšími problémy.Pokud se jedná o znevýhodněné dětí, může se zdát, že v menších obcích jsou více vidět.</p>
             </div>
         </div>
         <div class="section-o-nas-2__second-content">
-            <p class="paragraph">Rodiče takovýchto děti se s nimi chtějí zapojovat do běžného života a navštěvovat nejrůznější kroužky a aktivity. Několik milovických maminek se tedy spojilo a navázalo na úspěch vzniku Rodinného centra pod vedením paní ředitelky Mgr. Petra Dobiášová.​ </p>
+            <p class="paragraph">Rodiče takovýchto děti se s nimi chtějí zapojovat do běžného života a navštěvovat nejrůznější kroužky a aktivity. Několik milovických maminek se tedy spojilo a navázalo na úspěch vzniku Rodinného centra pod vedením paní ředitelky Mgr. Petra Dobiášová. </p>
             <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
         </div>
         <div class="section-o-nas-2__third-content">
@@ -79,7 +79,7 @@ title: O nás
 
 
 <!-- xxxxxxx
-<p class="paragraph paragraph--bold">​​​Chceš nás poznat blíž? Stav se na kafe!​​​</p>
+<p class="paragraph paragraph--bold">Chceš nás poznat blíž? Stav se na kafe!</p>
 <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
 
  -->
