--- a/o-nas.html
+++ b/o-nas.html
@@ -5,12 +5,13 @@ title: O nás
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-o-nas u-wrapper">
-        <h2 class="heading-secondary section-for__title">Co detailně děláme?</h2>
+        <h1 class="heading-secondary section-for__title">O nás</h1>
         <div class="section-o-nas__flex">
             <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/zaneta-mihalisin.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
             <div class="section-o-nas__content">
+                <h2 class="heading-tertiary">Co detailně děláme?</h2>
                 <p class="paragraph">Respekt, pochopení a přijetí, tři základní pojmy úspěšné mezilidské komunikace. Cílem naší iniciativy je propojení lidí. Propojit dospělé i děti, které obecně vnímáme jako zdravé s těmi znevýhodněnými, s těmi, kteří si žijí svůj vlastní život ve svém vlastním světě. Dáváme si za cíl podnítit zájem nahlédnout do uzavřeného světa našich nejbližších.</p>
-                <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Naše vize</a></p>
+                <p class="u-center-text u-padding-bottom-small"><a class="btn" href="/vize/">Naše vize</a></p>
             </div>
         </div>
     </section>
@@ -21,18 +22,27 @@ title: O nás
         <div class="section-o-nas-2__flex">
             <div class="section-o-nas-2__empty"></div>
             <div class="section-o-nas-2__first-content">
-                <h2 class="heading-tertiary section-for__title">Proč vlastně vznikl Konipas Milovice z.s? A kdo stál u zrodu?</h2>
-                <p class="paragraph">Milovicích žije přibližně 14 tisíc obyvatel. Rodiny se zde, jako všude jinde, potýkají s většími  i menšími problémy.Pokud se jedná o znevýhodněné dětí, může se zdát, že v menších obcích jsou více vidět.</p>
+                <p class="paragraph">Pravidelně pod vedením Žanety Mihališin Dis. jsou organizovány setkání a přátelské aktivity pro rodiče s dětmi. Navštěvují nás i odborníci k otevřeným, skupinovým diskuzím. Připravujeme obohacující, rozvojový  program pro rodiče, zatím co si děti hrají v herně. V herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých.</p>
             </div>
         </div>
         <div class="section-o-nas-2__second-content">
+            <p class="paragraph">Sdílíme názor, že sdílená starost, menší starost. Sdílená radost, dvojnásobná radost. Proto rádi vítáme nové rodiny, stálé účastníky. Snižujeme tak stigma ve společnosti, pomáháme si navzájem sdílením, společně podnikáme výlety.</p>
+            <h2 class="heading-tertiary">Proč vlastně vznikl Konipas Milovice z.s? A kdo stál u zrodu?</h2>
+            <p class="paragraph">Milovicích žije přibližně 14 tisíc obyvatel. Rodiny se zde, jako všude jinde, potýkají s většími  i menšími problémy. Pokud se jedná o znevýhodněné dětí, může se zdát, že v menších obcích jsou více vidět.</p>
             <p class="paragraph">Rodiče takovýchto děti se s nimi chtějí zapojovat do běžného života a navštěvovat nejrůznější kroužky a aktivity. Několik milovických maminek se tedy spojilo a navázalo na úspěch vzniku Rodinného centra pod vedením paní ředitelky Mgr. Petra Dobiášová. </p>
-            <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
         </div>
         <div class="section-o-nas-2__third-content">
-            <p class="paragraph section-o-nas-2__part-of-flex">Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat. Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.Labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam. jc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitat.</p>
+            <div class="section-o-nas-2__part-of-flex">
+                <h3 class="heading-tertiary">Kdo jsme?</h3>
+                <p class="paragraph">Jsme sdružení komunity rodičů, pořádající pravidelná setkání rodin s dětmi, v zázemí rodinného centra v Milovicích. Naše aktivity zahrnují pravidelná setkání, semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.  Sami pečujeme, víme co znamená starat se o díte  autismem, s vývojovou dysfázií.</p>
+            </div>
             <figcaption class="section-o-nas-2__fig u-padding-top-medium"><img class="section-o-nas-2__img" src="/images/IMG_20230517_170002.jpg" width="500" alt=""></figcaption>
         </div>
+        <div>
+            <h4>Chceš nás poznat blíž? Stav se na kafe!</h4>
+            <p class="paragraph">Připojte se k našemu týmu a spojte své zkušenosti s ostatními rodinami, které jsou součástí komunity Konipas Milovice z.s. Klíčovým principem je otevřená komunikace a vzájemný respekt. Rodičům zde poskytujeme prostor k vyjádření a naslouchání. Všichni členové rodiny se zapojují a během setkání mají děti možnost hrát si v herně.</p>
+        </div>
+        <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" href="#">Podívat se na termíny setkání</a></p>
     </section>
 
 
