--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@ title: KoniPAS
                 <p class="paragraph">Hlavním smyslem podpůrné skupiny je propojení, sounáležitost se všemi členy rodiny, přijetí. Spojuje nás společné, jsme rodina, jsme komunita, známe osoby se speciálními potřebami. Čas, zastavit se s rodinou. To pravé místo je s námi. Vítjte tu s námi!</p>
                 <p><a class="btn" href="/o-nas/">O nás</a></p>
             </div>
-            <div class="section-hero__images">
-                <div class="section-hero__img-wrapp section-hero__img-wrapp--1"></div>
-                <div class="section-hero__img-wrapp section-hero__img-wrapp--2"></div>
-                <div class="section-hero__img-wrapp section-hero__img-wrapp--3"></div>
+            <div class="section-hero__hexa">
+                <div class="section-hero__images">
+                    <div class="section-hero__img-wrapp section-hero__img-wrapp--1"></div>
+                    <div class="section-hero__img-wrapp section-hero__img-wrapp--2"></div>
+                    <div class="section-hero__img-wrapp section-hero__img-wrapp--3"></div>
+                </div>
             </div>
         </section>
 
