Work in progress

--- a/co-delame.html
+++ b/co-delame.html
@@ -4,7 +4,7 @@ title: Co děláme
 ---
 
 <div class="u-background u-background--color-primary-200">
-    <section class="u-wrapper u-padding-top-large u-padding-bottom-medium">
+    <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary">Naše služby</h1>
         <ul class="paragraph">
             <li>Pravidelná setkání podpůrných skupin zaměřených na sdílení a navazování kontaktů s ostatními rodinami. (probíhající setkání pondělky + termíny )</li>
