--- a/co-delame/odborne-staze.html
+++ b/co-delame/odborne-staze.html
@@ -6,12 +6,34 @@ title: Odborné stáže
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary">Nabídka stáže pro studenty středních a vysokých škol</h1>
-        <h4>Hlavními cíli praxe jsou:</h4>
+        <h2 class="heading-quartiary">Hlavními cíli praxe jsou:</h2>
         <ul class="paragraph">
             <li>Poskytnout školám možnost praktické odborné přípravy studentů</li>
             <li>Seznámit studenty a odborníky s pojetím a podobou služeb Konipas Milovice z.s. a navázat možnou spolupráci</li>
             <li>Podporovat šíření myšlenky komunitní péče a perspektivy organizace Konipas Milovice z.s. v práci s lidmi s duševními onemocněními a neurovývojovými poruchami</li>
             <li>Využít potenciál účastníků praxe v jejich zpětné vazbě ohledně poskytovaných služeb.</li>
         </ul>
+        <h2 class="heading-quartiary">Formy poskytování odborné praxe:</h2>
+        <p class="paragraph">Délka trvání praxe obvykle činí alespoň jeden nepřetržitý týden.<br>Dlouhodobá praxe pak trvá 1-2 dny v týdnu po celou dobu jednoho semestru, po dohodě i déle.</p>
+        <h2 class="heading-quartiary">Základní podmínky:</h2>
+        <ul class="paragraph">
+            <li>Zájemce o praxi podává žádost o poskytnutí odborné praxe a to nejméně 30 dní před jejím zahájení</li>
+            <li>Vždy je nutné uzavřít smlouvu s účastníkem praxe. Pokud účastník požaduje potvrzení o stáž pro školu je smlouva uzavřena také s nimi</li>
+            <li>Praxe v rozsahu menším než 10 pracovních dní (80 hodin)</li>
+        </ul>
+        <h2 class="heading-quartiary">V úvodu praxe vzniká stručná dohoda o její podobě a náplni:</h2>
+        <ul class="paragraph">
+            <li>Účastník praxe podepisuje etický kodex pracovníka Fokusu Praha</li>
+            <li>Na závěr praxe probíhá hodnotící reflexe. Poskytovatel na vyžádání vydává potvrzení o praxi či hodnocení praxe</li>
+        </ul>
+    </section>
+</div>
+
+<div class="u-background u-background--color-primary-400">
+    <section class="section-for u-wrapper u-padding-top-medium u-padding-bottom-medium">
+        <h1 class="heading-secondary u-center-text">Jak bude praxe probíhat?</h1>
+        <p class="paragraph">Účastník praxe má k dispozici určenou osobu, na kterou se může v rámci praxe obracet a která ho praxí provází, respektuje její vedení. Může se bezprostředně ptát na vše, co souvisí s jeho přítomností na praxi, s výjimkou informací podléhajícím ochraně osobních a citlivých údajů. Nezasahuje samostatně bez vědomí pracovníků do přímé práce s klienty. Informuje pracovníky o skutečnostech z kontaktu s klienty, které považuje během praxe za důležité</p>
+        <h2 class="heading-quartiary">Mám zájem o praxi i v KoniPas Milovice z.s.:</h2>
+        <p class="paragraph">Zašlete e-mail s vyplněnou žádostí / odkaz na žádost/ a motivační dopis na adresu …     Kontaktní osoba: Mgr. Petra Dobiášová, tel. 602 648 340</p>
     </section>
 </div>
