--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ title: KoniPAS
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-9.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Odborné stáže</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="/co-delame/odborne-staze/">Odborné stáže</a></p>
                     </article>
                 </div>
             </section>
