--- a/co-delame/nase-sluzby.html
+++ b/co-delame/nase-sluzby.html
@@ -1,6 +1,6 @@
 ---
 layout: layouts/hlavni-sablona.njk
-title: Co děláme
+title: Naše služby
 ---
 
 <div class="u-background u-background--color-primary-200">
