--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ title: KoniPAS
 
                     <!-- 1-3 -->
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-1.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Pomáháme rodinám</a></p>
+                        <a class="card-action__link-grid" href="/co-delame/pomahame-rodinam/"><img class="card-action__img" src="/images/placeholder-actions-1.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-2.jpg" alt=""></a>
@@ -40,7 +40,7 @@ title: KoniPAS
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-3.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Sdílíme vizi</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="/vize/">Sdílíme vizi</a></p>
                     </article>
 
                     <!-- 3-6 -->
@@ -59,15 +59,15 @@ title: KoniPAS
 
                     <!-- 6-9 -->
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="#">Služby &amp; terapie</a></p>
+                        <a class="card-action__link-grid" href="/co-delame/nase-sluzby/"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
+                        <p class="card-action__p"><a class="card-action__link" href="/co-delame/nase-sluzby/">Služby &amp; terapie</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="#">Půjčujeme pomůcky</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-9.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/co-delame/odborne-staze/"><img class="card-action__img" src="/images/placeholder-actions-9.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="/co-delame/odborne-staze/">Odborné stáže</a></p>
                     </article>
                 </div>
