--- a/partneri.html
+++ b/partneri.html
@@ -5,6 +5,13 @@ title: Partneři
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
+        <h1 class="heading-secondary section-for__title">Naši partneři</h1>
+        <div>
+            <div>
+                <figcaption><img src="/images/logo_milovice.jpg" width="300" alt="logo města Milovice"></figcaption>
+                <h4>Město Milovice</h4>
+            </div>
+        </div>
         <h1 class="heading-secondary section-for__title">Staňte se našimi partnery</h1>
         <p class="paragraph">Jsme tady proto, abychom podpořili a pomohli rodinám, které mají děti s poruchou autistického spektra (PAS). Snažíme se vytvořit pro tyto rodiny prostředí plné porozumění, empatie a spolupráce. Pracujeme společně s odborníky, rodinnými terapeuty a dalšími organizacemi, abychom poskytli komplexní podporu a zároveň přispěli k lepšímu porozumění této specifické výzvě.</p>
         <h2 class="heading-quartiary">Proč se stát naším partnerem?</h2>
