Working in progress

--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -3,10 +3,23 @@ layout: layouts/hlavni-sablona.njk
 title: Komunitní dění
 ---
 
+<div class="u-background u-background--color-primary-200">
+    <section class="section-o-nas u-wrapper">
+        <h1 class="heading-primary">Aktuality</h1>
+        <div class="section-o-nas-2__third-content">
+            <div class="section-o-nas-2__part-of-flex">
+                <p class="paragraph">Akce dne 25.9 v Milovicích ,,Cesta pohádkovým lesem" měla obrovskou účast rodin ❤️ Děti nadšeně plnili úkoly, vyhrávali ceny v tombole, tvořili v dílničce. Pohladili si zvířátka z chovu Kristýna Novotná. Celé rodiny se potěšili nabídce, v altánu s občerstvením a domácími výrobky maminek z Rodinné centrum Milovice </p>
+                <p class="paragraph">Zahřál nás každý pozdrav od Vás i návštéva u nás na stánku s tombolou ❤️</p>
+            </div>
+            <figcaption class="section-o-nas-2__fig u-padding-top-small"><img class="section-o-nas-2__img" src="/images/IMG_20230517_165920.jpg" width="500" alt="spojené ruce"></figcaption>
+        </div>
+        <p class="paragraph">Se srdcem na dlani DĚKUJEME!</p>
+    </section>
+</div>
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
-        <h1 class="heading-tertiary">Přijďte se s námi setkat</h1>
+        <h1 class="heading-primary">Přijďte se s námi setkat</h1>
         <figcaption class="comunity__fig"><img class="comunity__img" src="/images/letak_rijen.jpg" alt="latáček akcí říjen 2023"></figcaption>
     </section>
 </div>
