--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -8,7 +8,7 @@ title: Komunitní dění
         <h1 class="heading-primary">Aktuality</h1>
         <div class="section-o-nas-2__third-content">
             <div class="section-o-nas-2__part-of-flex">
-                <p class="paragraph">Akce dne 25.9 v Milovicích ,,Cesta pohádkovým lesem" měla obrovskou účast rodin ❤️ Děti nadšeně plnili úkoly, vyhrávali ceny v tombole, tvořili v dílničce. Pohladili si zvířátka z chovu Kristýna Novotná. Celé rodiny se potěšili nabídce, v altánu s občerstvením a domácími výrobky maminek z Rodinné centrum Milovice </p>
+                <p class="paragraph">Akce dne 25.9 v Milovicích ,,Cesta pohádkovým lesem" měla obrovskou účast rodin ❤️ Děti nadšeně plnili úkoly, vyhrávali ceny v tombole, tvořili v dílničce. Pohladili si zvířátka z chovu Kristýny Novotné. Celé rodiny se potěšili nabídce, v altánu s občerstvením a domácími výrobky maminek z Rodinné centrum Milovice </p>
                 <p class="paragraph">Zahřál nás každý pozdrav od Vás i návštéva u nás na stánku s tombolou ❤️</p>
             </div>
             <figcaption class="section-o-nas-2__fig u-padding-top-small"><img class="section-o-nas-2__img" src="/images/IMG_20230517_165920.jpg" width="500" alt="spojené ruce"></figcaption>
