--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: KoniPAS
                     <!-- 6-9 -->
                     <article class="card-action">
                         <a class="card-action__link-grid" href="/co-delame/nase-sluzby/"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
-                        <p class="card-action__p"><a class="card-action__link" href="/co-delame/nase-sluzby/">Služby &amp; terapie</a></p>
+                        <p class="card-action__p"><a class="card-action__link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></p>
                     </article>
                     <article class="card-action">
                         <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
