--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@ title: Kontakt
             <div class="section-o-nas-2__part-of-flex">
                 <p class="paragraph paragraph--bold">Sídlo</p>
                 <p class="paragraph">KoniPAS Milovice, z.s <br>A:Průběžná 606 <br>28923 Milovice</p>
-                <p class="paragraph">mobil: 733612720</p>
+                <p class="paragraph">mobil: 733 612 720</p>
             </div>
             <div class="section-o-nas-2__part-of-flex">
                 <p class="paragraph paragraph--bold">Kontaktní údaje rodinného centra kde se scházíme:</p>
