working in progress

--- a/partneri.html
+++ b/partneri.html
@@ -7,12 +7,14 @@ title: Partneři
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary section-for__title">Naši partneři</h1>
         <div>
+            <h2 class="heading-tertiary">Podporují nás:</h2>
             <div>
                 <figcaption><img src="/images/logo_milovice.jpg" width="300" alt="logo města Milovice"></figcaption>
                 <h4>Město Milovice</h4>
+                <p class="paragraph paragraph--bold">- Dotace na provoz KoniPas Milovice, z.s. - r. 2024</p>
             </div>
         </div>
         
-        <p class="paragraph paragraph--bold">Děkujeme všem firmám a organizacím, které mají zájem spolupracovat s KoniPAS Milovice z.s. Jsme vděčni za vaši přízeň a podporu.</p>
+        <p class="paragraph paragraph--bold u-margin-top-medium">Děkujeme všem firmám a organizacím, které mají zájem spolupracovat s KoniPAS Milovice z.s. Jsme vděčni za vaši přízeň a podporu.</p>
     </section>
 </div>
