Added page support

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: KoniPAS
         <section class="section-hero">
             <div class="section-hero__content">
                 <h1 class="heading-secondary">,,Rozumět znamená pomáhat“</h1>
-                <p class="paragraph">Hlavním smyslem podpůrné skupiny je propojení, sounáležitost se všemi členy rodiny, přijetí. Spojuje nás společné, jsme rodina, jsme komunita, známe osoby se speciálními potřebami. Čas, zastavit se s rodinou. To pravé místo je s námi. Vítjte tu s námi!</p>
+                <p class="paragraph">Hlavním smyslem podpůrné skupiny je propojení, sounáležitost se všemi členy rodiny, přijetí. Spojuje nás společné, jsme rodina, jsme komunita, známe osoby se speciálními potřebami. Čas, zastavit se s rodinou. To pravé místo je s námi. Vítejte tu s námi!</p>
                 <p><a class="btn" href="/o-nas/">O nás</a></p>
             </div>
             <div class="section-hero__hexa">
