Added page Co delame

--- a/podpora.html
+++ b/podpora.html
@@ -7,7 +7,7 @@ title: Podpora
     <section class="section-o-nas u-wrapper">
         <h1 class="heading-secondary section-for__title">Podpora</h1>
         <div class="section-o-nas__flex">
-            <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/podpora.jpg" width="460px" alt="zakladatelka KoniPAS"></figcaption>
+            <figcaption class="section-o-nas__fig u-padding-top-small"><img class="section-o-nas__img" src="/images/podpora.jpg" width="460px" alt="ruce vyjadřující podporu"></figcaption>
             <div class="section-o-nas__content">
                 <h2 class="heading-tertiary">Co detailně děláme?</h2>
                 <p class="paragraph">Služby z oblasti péče lidí s autismem, VD či jinou neurodiverzitou jsou bohužel v České republice stále méně rozšířené, než je tomu v zahraničí. Jejich využívání je navíc finančně a mnohdy také časově náročné. Jako rodiče výjimečných dětí jsme často nuceni dojíždět do jiného města, mnohdy i jiného okresu, abychom byli schopni pro naše potomky zajistit adekvátní a mnohdy beznadějně nedostupnou kvalitní péči. </p>
