--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -20,6 +20,6 @@ title: Komunitní dění
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-primary">Přijďte se s námi setkat</h1>
-        <figcaption class="comunity__fig"><img class="comunity__img" src="/images/letak_rijen.jpg" alt="latáček akcí říjen 2023"></figcaption>
+        <figcaption class="comunity__fig"><img class="comunity__img" src="/images/letak_brezen-2024.jpeg" alt="latáček akcí březen 2024"></figcaption>
     </section>
 </div>
