--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@ title: KoniPAS
                 <h2 class="heading-secondary section-for__title u-padding-bottom-small">Pro koho</h2>
                 <div class="columns">
                     <h3 class="heading-tertiary u-margin-top-0">Děti se speciálními potřebami</h3>
-                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra</p>
-                    <h3 class="heading-tertiary u-margin-top-0">Co je PAS</h3>
-                    <p class="paragraph">Lorem ipsum ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis.</p>
+                    <p class="paragraph">Skupinová setkání jsou určena rodinám, které pečují o děti s poruchami autistického spektra (PAS), vývojovou dysfázií, poruchami pozornosti (ADHD/ADD), opožděným vývojem řeči, nerovnoměrným vývojem nebo podezřením na jakoukoli diagnózu, která způsobuje, že dítě vyžaduje speciální přístup.</p>
+                    <div>
+                        <h3 class="heading-tertiary u-margin-top-0">Co jsou poruchy autistického spektra (PAS)</h3>
+                        <p class="paragraph">Poruchy autistického spektra patří k nejzávažnějším poruchám mentálního vývoje. Jedná se o vrozenou poruchu mozkových funkcí, která způsobuje, že dítě prožívá, myslí a chová se jinak než jeho vrstevníci. Děti s PAS se odlišně vyvíjí zejména v oblasti komunikace, navazování sociálních vztahů, empatii, rozvíjení fantazie a při zvládání běžných denních úkolů. Mezi nejčastější projevy patří snížená či chybějící schopnost komunikace, problémy s navazováním očního kontaktu, zvláštní pohyby těla, přehnané reakce na některé podněty, nerovnoměrný vývoj a obtížné přizpůsobení změnám.</p>
+                    </div>
                 </div>
-                <p class="u-center-text u-padding-top-small"><a class="btn" href="#">Zjistit více</a></p>
+                <p class="u-center-text u-padding-top-small"><a class="btn" href="/poruchy/">Zjistit více</a></p>
             </section>
         </div>
 
@@ -108,17 +110,18 @@ title: KoniPAS
             <section class="section-gift u-wrapper u-padding-bottom-medium">
                 <div class="section-gift__content">
                     <h2 class="heading-secondary section-gift__title">Bez Vás to nedokážeme</h2>
-                    <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc.</p>
+                    <p class="paragraph">Svoji činnost chceme v Milovicích dále rozvíjet a vytvořit zde celou strukturu dostupných služeb a péče vhodné pro děti i dospělé.</p>
                 </div>
                 <div class="section-gift__qr">
                     <div class="section-gift__qr-col-1-of-2">
                         <h3 class="section-gift__qr-title">Náš transparentní účet:</h3>
-                        <p class="section-gift__num-account u-padding-bottom-small">1234 5678 9632 / 3214</p>
+                        <p class="section-gift__num-account u-padding-bottom-small">2602681682 / 2010</p>
                         <figcaption class="section-gift__fig"><img class="section-gift__img" src="/images/QR-Code.svg" alt="QR kód"></figcaption>
                     </div>
                     <div class="section-gift__qr-col-2-of-2">
-                        <p class="paragraph">Ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conskdjc laboris nisi ut aliquip ex ea commodo conskdjc ant venis toruk maktou que labra Ut enim ad minim veniam, quis nostrud exe.</p>
+                        <p class="paragraph">Pracujeme na sestavení multidisciplinárního týmu, který poskytne potřebnou komplexní péči rodinám ve vhodných prostorách k tomu určených. Chceme nabízet rozvojové aktivity, smyslové terapie a vícedenní skupinové pobyty pro rodiny. Avšak k naplnění tohoto cíle potřebujeme i Vaši pomoc.</p>
+                        <p class="paragraph">Váš finanční příspěvek nám umožní rozšířit naše služby, zajistit kvalitní odbornou pomoc a nabídnout rodinám více příležitostí pro vzájemné setkávání a sdílení. Každý dar, bez ohledu na jeho velikost, má obrovský význam. Přispívá k tomu, aby se rodiče a jejich děti necítili osamoceni ve svém boji, ale naopak cítili sílu a podporu celé komunity.</p>
+                        <p class="paragraph">Děkujeme Vám za Vaši podporu a za to, že jste součástí naší cesty. Společně dokážeme více!</p>
                         <p class="u-center-text u-margin-top-medium u-padding-bottom-small"><a class="btn" href="#">Více o možnostech podpory</a></p>
                     </div>
                 </div>
