--- a/partneri.html
+++ b/partneri.html
@@ -9,7 +9,7 @@ title: Partneři
         <div>
             <h2 class="heading-tertiary">Podporují nás:</h2>
             <div>
-                <figcaption><img src="/images/logo_milovice.jpg" width="300" alt="logo města Milovice"></figcaption>
+                <picture><img src="/images/logo_milovice.jpg" width="300" alt="logo města Milovice"></picture>
                 <h4>Město Milovice</h4>
                 <p class="paragraph paragraph--bold">- Dotace na provoz KoniPas Milovice, z.s. - r. 2024</p>
             </div>
